--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,6 +33,11 @@
           <ul class="navbar-nav ms-auto">
             {% if current_user.is_authenticated %}
             <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('main.dashboard') }}"
+                >Dashboard</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{{ url_for('main.logout') }}">Logout</a>
             </li>
             {% else %}
