Added the feature to edit and delete the subject

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %} {% block content %} {% if
 current_user.is_authenticated %}
 <h1>Dashboard</h1>
-<p>Welcome, {{ current_user.username }}!</p>
-<p>Your role: {{ current_user.role }}</p>
+<h3>Welcome, {{ current_user.username }}!</h3>
 {%if current_user.role=='teacher'%}
 <a href="{{ url_for('main.add_subject') }}" class="btn btn-primary"
   >Add Subject</a
 >
-{%endif%} {%for subject in subjects%}
+{%endif%} {%for subject in subjects %}
 <div class="card mt-3">
   <div class="card-body">
     <h5 class="card-title">{{ subject.name }}</h5>
@@ -17,6 +16,18 @@ current_user.is_authenticated %}
       class="btn btn-primary"
       >View Subject</a
     >
+    {%if current_user.role=='teacher'%}
+    <a
+      href="{{url_for('main.edit_subject', subject_id=subject.id)}}"
+      class="btn btn-primary"
+      >Edit Subject</a
+    >
+    <a
+      href="{{url_for('main.delete_subject', subject_id=subject.id)}}"
+      class="btn btn-danger"
+      >Delete Subject</a
+    >
+    {%endif%}
   </div>
 </div>
 {%endfor%} {% else %}
