--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,25 @@
 {% extends "base.html" %} {% block content %}
-<h1>Welcome to the Home Page</h1>
-<p>This is the home page content.</p>
+<div class="container text-center mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h1 class="display-4 fw-bold">Welcome to QuizMaster</h1>
+      <p class="lead text-muted">
+        Test your knowledge and compete with others on a variety of topics.
+      </p>
+
+      <div class="mt-4">
+        <a
+          href="{{ url_for('main.login') }}"
+          class="btn btn-primary btn-lg me-3"
+          >Login</a
+        >
+        <a
+          href="{{ url_for('main.register') }}"
+          class="btn btn-outline-primary btn-lg"
+          >Register</a
+        >
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
